--- a/.github/workflows/master_cafepalmira.yml
+++ b/.github/workflows/master_cafepalmira.yml
@@ -1,7 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-# More info on Python, GitHub Actions, and Azure App Service: https://aka.ms/python-webapps-actions
-
 name: Build and deploy Python app to Azure Web App - cafepalmira
 
 on:
@@ -15,64 +11,70 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # Paso 1: Checkout del código
       - uses: actions/checkout@v4
 
+      # Paso 2: Configurar Python
       - name: Set up Python version
-        uses: actions/setup-python@v1
+        uses: actions/setup-python@v2
         with:
-          python-version: '3.12'
+          python-version: '3.12'  # Asegúrate de usar la versión correcta de Python
 
+      # Paso 3: Crear y activar entorno virtual
       - name: Create and start virtual environment
         run: |
           python -m venv venv
-          source venv/bin/activate
-      
+          source venv/bin/activate  # En sistemas Unix/Mac
+
+      # Paso 4: Instalar dependencias
       - name: Install dependencies
         run: pip install -r requirements.txt
-        
-      # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
+      # Paso 5: Crear el archivo zip para el despliegue
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
 
+      # Paso 6: Subir el artefacto para el trabajo de despliegue
       - name: Upload artifact for deployment jobs
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v2
         with:
           name: python-app
           path: |
             release.zip
-            !venv/
+            !venv/  # Evita subir el directorio venv
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build
+    needs: build  # Este trabajo depende del trabajo build
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
-      id-token: write #This is required for requesting the JWT
+      id-token: write  # Esto es necesario para solicitar el JWT
 
     steps:
+      # Paso 1: Descargar el artefacto desde el trabajo de build
       - name: Download artifact from build job
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v2
         with:
           name: python-app
 
+      # Paso 2: Descomprimir el artefacto para el despliegue
       - name: Unzip artifact for deployment
         run: unzip release.zip
 
-      
+      # Paso 3: Iniciar sesión en Azure
       - name: Login to Azure
         uses: azure/login@v1
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_EEF98D6547B34AEBB4728E25D02AD6A9 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_CB0D93310EAD40A0ABB5D8B70D98576E }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_22530963B60A48ABB70ECB3BAE03A7C7 }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID }}  # Asegúrate de que estos secretos estén configurados
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID }}
 
+      # Paso 4: Desplegar en Azure Web App
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v2
         id: deploy-to-webapp
         with:
-          app-name: 'cafepalmira'
-          slot-name: 'Production'
-          
+          app-name: 'cafepalmira'  # Nombre de tu aplicación en Azure
+          slot-name: 'Production'  # Nombre del slot de producción
